[tool.poetry]
name = "dune_streamlit"
version = "0.1.0"
description = "TEst app for Dune API"
authors = ["gregshestakov <gregshestakov@gmail.com >"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
streamlit = "^1.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
